<resources>
    <string name="app_name">Android Setup</string>
    <string name="google_maps_key">AIzaSyBLkZmdY0vno8jvRynIUx_Y1yAnxr3wM60</string>
    <string name="yet_to_implement">Yet to implement</string>
    <string name="internet_connection_offline">No internet connection. Please try later</string>
    <string name="alert_dialog_ok">Okay</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="password_not_valid">Password must contain at least 1 in upper case, lower case and number with length 8 to 16 characters</string>
    <string name="splash_image">splash_image</string>
    <string name="title_home">Home</string>
    <string name="title_work_with_pressure">Work with pressure</string>
    <string name="title_family">Family</string>
    <string name="title_settings">Settings</string>
    <string name="title_logout">Logout</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>
    <string name="welcome_home_dear">Welcome home dear!</string>
    <string name="now_its_time_to_look_up_your_family">Now, Its time to look up your family</string>
    <string name="time_to_tune_your_settings">Time to tune your settings…</string>
    <string name="work_starts_to_do_its_work_explodes_in_peace">Work starts to do its work\nExplodes in peace</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Are you sure want to logout?</string>
    <string name="ninety_nine_plus">99+</string>
    <string name="current_location">current location</string>
    <string name="saved_locations">Saved Locations</string>
    <string name="need_location_permission_to_proceed_further">Need to grant location permission to proceed further</string>
    <string name="location_permission_fetch_current_location">Need to grant location permission to fetch your location</string>
    <string name="location_permission_needed">This app needs Location permission</string>
    <string name="info">Info</string>
    <string name="grant_location_permission">Go to Permissions to Grant Location permission</string>
    <string name="work">Work</string>
    <string name="set_location_for">Set Location for :</string>
    <string name="gets_the_current_location">Gets the Current Location</string>
</resources>
