<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/title_home"
            />

        <item
            android:id="@+id/nav_work"
            android:checked="false"
            android:icon="@drawable/ic_work"
            android:title="@string/title_work_with_pressure"
            app:actionViewClass="android.widget.TextView"/>

        <item
            android:id="@+id/nav_family"
            android:checked="false"
            android:icon="@drawable/ic_family"
            android:title="@string/title_family"/>

        <item
            android:id="@+id/nav_maps"
            android:checked="false"
            android:icon="@drawable/ic_maps"
            android:title="@string/saved_locations" />

        <item
            android:id="@+id/nav_settings"
            android:checked="false"
            android:icon="@drawable/ic_settings"
            android:title="@string/title_settings"/>

        <item
            android:id="@+id/nav_logout"
            android:checked="false"
            android:icon="@drawable/ic_logout"
            android:title="@string/title_logout"/>
    </group>
</menu>