<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_20"
            android:layout_marginRight="@dimen/spacing_20"
            android:background="@drawable/np_rounded_corner"
            android:paddingBottom="@dimen/spacing_20"
            android:paddingTop="@dimen/spacing_20">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_50"
                android:background="@drawable/np_background_rounded_corner"
                android:paddingLeft="@dimen/spacing_10"
                android:paddingRight="@dimen/spacing_10">

                <TextView
                    android:id="@+id/welcome_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_60"
                    android:gravity="center"
                    android:text="@string/welcome"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/font_20" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/welcome_text"
                    android:layout_marginTop="@dimen/spacing_20">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <!-- Password Label -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_layout"
                    android:layout_marginTop="@dimen/spacing_20"
                    app:passwordToggleEnabled="false">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password_layout"
                    android:layout_marginBottom="@dimen/spacing_20"
                    android:layout_marginTop="@dimen/spacing_20"
                    android:background="@drawable/ripple_background"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_18" />
            </RelativeLayout>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_user"
                android:layout_width="@dimen/spacing_100"
                android:layout_height="@dimen/spacing_100"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_app_icon"
                app:riv_oval="true" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>